--- a/airflow/providers/starburst/provider.yaml
+++ b/airflow/providers/starburst/provider.yaml
@@ -19,7 +19,7 @@
 package-name: apache-airflow-providers-starburst
 name: Starburst
 description: |
-  `Starburst <https://starburstdata.io/>`__
+  `Starburst <https://starburst.io/>`__
 
 versions:
   - 1.0.0
@@ -28,8 +28,8 @@ additional-dependencies:
   - apache-airflow>=2.1.0
 
 integrations:
-  - integration-name: Starburst
-    external-doc-url: https://trinodata.io/docs/
+  - integration-name: Trino
+    external-doc-url: https://trino.io/docs/
     logo: /integration-logos/trino/trino-og.png
     tags: [service]
 
